--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "core-js": "^3.10.1",
+    "cotter": "^0.3.32",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
