--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^11.2.8",
     "@angular/compiler": "^11.2.8",
     "@angular/core": "^11.2.8",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.2.8",
     "@angular/localize": "^11.2.8",
     "@angular/material": "^11.2.8",
@@ -28,6 +29,7 @@
     "core-js": "^3.10.1",
     "cotter": "^0.3.32",
     "express": "^4.16.3",
+    "firebase": "^8.3.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "mongoose-unique-validator": "^2.0.3",
@@ -45,8 +47,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "^11.2.8",
-    "@angular/compiler-cli": "^11.2.8",
-    "@angular/language-service": "^11.2.8",
+    "@angular/compiler-cli": "^11.2.9",
+    "@angular/language-service": "^11.2.9",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
