--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^11.2.8",
     "@angular/platform-browser-dynamic": "^11.2.8",
     "@angular/router": "^11.2.8",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "core-js": "^3.10.1",
