--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@angular/platform-browser": "^11.2.8",
     "@angular/platform-browser-dynamic": "^11.2.8",
     "@angular/router": "^11.2.8",
+    "@sendgrid/mail": "^7.4.2",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "core-js": "^3.10.1",
     "cotter": "^0.3.32",
     "express": "^4.16.3",
-    "firebase": "^8.4.0",
+    "firebase": "^8.4.1",
+    "html2canvas": "^1.0.0-rc.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "mongoose-unique-validator": "^2.0.3",
