--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^11.2.10",
     "@angular/router": "^11.2.10",
     "@sendgrid/mail": "^7.4.2",
-    "@techiediaries/ngx-qrcode": "^9.1.0",
+    "angularx-qrcode": "^11.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "core-js": "^3.10.1",
