--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^11.2.11",
     "@angular/router": "^11.2.11",
     "@sendgrid/mail": "^7.4.2",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "angularx-qrcode": "^11.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
