--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^11.2.11",
     "@angular/platform-browser-dynamic": "^11.2.11",
     "@angular/router": "^11.2.11",
+    "@ngrx/store": "^12.0.0",
     "@sendgrid/mail": "^7.4.2",
     "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "angularx-qrcode": "^11.0.0",
