--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                 "inject": true
               },
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"              
             ],
             "scripts": []
           },
