--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.3",
     "firebase": "^8.4.2",
     "html2canvas": "^1.0.0-rc.7",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "mongoose-unique-validator": "^2.0.3",
@@ -44,6 +45,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-material-timepicker": "^5.5.3",
+    "ngx-owl-carousel-o": "^5.0.0",
     "rxjs": "^6.6.7",
     "sweetalert2": "^10.16.6",
     "tslib": "^2.2.0",
@@ -56,6 +58,7 @@
     "@angular/language-service": "^11.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.20.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
